# SimLoss

./: .gitignore  README.md  pyproject.toml
data/: SimLoss.csv  combinados.csv
data/output/: COSINE_JACCARD.csv  COSINE_MSE.csv  RELU_JACCARD.csv  RELU_MSE.csv
src/: __init__.py  constants.py  extractor.py  losses.py  model.py  models.py  other_models.py  utils.py
